###
#
# @file          : CMakeLists.txt
#
# @description   : Project MORSE
#
# @version       :
# @created by    : Cedric Castagnede
# @creation date : 25-01-2012
# @last modified : mer. 25 janv. 2012 20:48:18 CET
#
###

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Check for the subdirectories 
# ----------------------------
ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(codelets)

###
### END CMakeLists.txt
###
